Transfer of content

--- a/cellprofiler/gui/html/in_app_help.html
+++ b/cellprofiler/gui/html/in_app_help.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title></title>
 </head>
-<body style = "font-family: sans-serif;">
+<body style = "font-family: sans-serif; font-size: small;">
     <p>In addition to the Help menu in the main CellProfiler window, there are <img src="{{MODULE_HELP_BUTTON}}">
     buttons containing more specific documentation for using CellProfiler. Clicking the "?" button near the pipeline
     window will show information about the selected module within the pipeline, whereas clicking the
