--- a/cellprofiler/gui/html/welcome.html
+++ b/cellprofiler/gui/html/welcome.html
@@ -10,20 +10,17 @@
 <table style="margin: auto; width: 100%; height: 275px;" border="3" cellspacing="5" cellpadding="3">
 <tbody>
 <tr style="height: 50%; vertical-align: middle;">
-<td style="width: 25%; border-width: 3; border-color: blue;" align="center"><strong><span style="font-size: small;">Load Example</span></strong><br /> <br /> <a href="loadexample:ExampleFly"><img src="{{WELCOME_PIPELINE}}" border="" /></a></td>
-<td style="width: 25%;" align="center"><strong><span style="font-size: small;">More Examples</span></strong><br /> <br /> <a href="http://cellprofiler.org/examples.html"><img src="{{WELCOME_EXAMPLES}}" border="" /></a></td>
-<td style="width: 25%;" align="center"><strong><span style="font-size: small;">Tutorials</span></strong><br /> <br /> <a href="http://cellprofiler.org/tutorials.html"><img src="{{WELCOME_TUTORIALS}}" border="" /></a></td>
-<td style="width: 25%;" align="center"><strong><span style="font-size: small;">Q&amp;A Forum</span></strong><br /> <br /> <a href="http://forum.cellprofiler.org/"><img src="{{WELCOME_FORUM}}" border="" /></a></td>
+    <td style="width: 25%; border-width: 3; border-color: blue;" align="center"><strong><span style="font-size: small;">Load Example</span></strong><br /> <a href="loadexample:ExampleFly"><img src="{{WELCOME_PIPELINE}}" border="" /></a></td>
+    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Getting Started<br /> <a href="help:gettingstarted"><img src="{{WELCOME_TOUR}}" border=""/></a></span></strong></td>
+    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">More Examples</span></strong><br /> <a href="http://cellprofiler.org/examples.html"><img src="{{WELCOME_EXAMPLES}}" border="" /></a></td>
+
+    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Tutorials</span></strong><br /> <a href="http://cellprofiler.org/tutorials.html"><img src="{{WELCOME_TUTORIALS}}" border="" /></a></td>
 </tr>
 <tr style="height: 50%; vertical-align: middle;">
-<td style="width: 25%;" align="center"><strong><span style="font-size: small;">What's New<br /> <br /> <a href="http://cellprofiler.org/doesntexistyet.html"><img src="{{WELCOME_TOUR}}" border=""/></a></span></strong></td>
-<td style="width: 25%;" align="center">
-<strong><span style="font-size: small;">Built-In Help<br /> <br /> <a href="help:inapphelp"><img src="{{WELCOME_HELP}}" border="" /></a></span></strong>
-</td>
-<td style="width: 25%;" align="center"><strong><span style="font-size: small;">Manual<br /> <br /> <a href="{{MANUAL_URL}}"> <img src="{{WELCOME_MANUAL}}" border="" /></a></span></strong></td>
-<td style="width: 25%;" align="center">
-<p><button onclick="location.href='pref:no_display'" type="button"> Don't show<br />this again</button></p>
-</td>
+    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Q&amp;A Forum</span></strong><br /> <a href="https://forum.image.sc/tag/cellprofiler"><img src="{{WELCOME_FORUM}}" border="" /></a></td>
+    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Built-In Help<br /> <a href="help:inapphelp"><img src="{{WELCOME_HELP}}" border="" /></a></span></strong></td>
+    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Manual<br /> <a href="{{MANUAL_URL}}"> <img src="{{WELCOME_MANUAL}}" border="" /></a></span></strong></td>
+    <td style="width: 25%;" align="center"><p><button onclick="location.href='pref:no_display'" type="button"> Don't show<br />this again</button></p></td>
 </tr>
 </tbody>
 </table>
