--- a/cellprofiler/gui/html/getting_started.html
+++ b/cellprofiler/gui/html/getting_started.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title></title>
-</head>
 <body style = "font-family: sans-serif; font-size: small;">
     <table border="0" cellpadding="4" width="100%">
         <tr>
@@ -60,7 +57,7 @@
             <td><i><span style="font-size: larger; ">3: Test</span></i></td>
             <td>
                 Click the "Start Test Mode" button to step through the pipeline
-                and <a href="help://{TEST_MODE_REF}">check</a> the module
+                and <a href="help:testmode">check</a> the module
                 settings on a few images.
             </td>
         </tr>
@@ -69,11 +66,11 @@
             <td><i><span style="font-size: larger; ">4: Analyze</span></i></td>
             <td>
                 Click the "Analyze Images" button to <a href=
-                "help:{{RUNNING_YOUR_PIPELINE_REF}}">process</a> all of your
+                "help:runningpipeline">process</a> all of your
                 images with your pipeline.
             </td>
         </tr>
     </table><br>
-{{GO_BACK}}
+{{GO_HOME}}
 </body>
 </html>
