Update the URLs

--- a/cellprofiler/gui/html/welcome.html
+++ b/cellprofiler/gui/html/welcome.html
@@ -11,9 +11,9 @@
 <tr style="height: 50%; vertical-align: middle;">
     <td style="width: 25%; border-width: 3; border-color: blue;" align="center"><strong><span style="font-size: small;">Try Example</span></strong><br /> <a href="loadexample:ExampleFly"><img src="{{WELCOME_PIPELINE}}" border="" /></a></td>
     <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Getting Started<br /> <a href="help:gettingstarted"><img src="{{WELCOME_START}}" border=""/></a></span></strong></td>
-    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">More Examples</span></strong><br /> <a href="http://cellprofiler.org/examples.html"><img src="{{WELCOME_EXAMPLES}}" border="" /></a></td>
+    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">More Examples</span></strong><br /> <a href="http://cellprofiler.org/examples"><img src="{{WELCOME_EXAMPLES}}" border="" /></a></td>
 
-    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Tutorials</span></strong><br /> <a href="http://cellprofiler.org/tutorials.html"><img src="{{WELCOME_TUTORIALS}}" border="" /></a></td>
+    <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Tutorials</span></strong><br /> <a href="http://cellprofiler.org/tutorials"><img src="{{WELCOME_TUTORIALS}}" border="" /></a></td>
 </tr>
 <tr style="height: 50%; vertical-align: middle;">
     <td style="width: 25%;" align="center"><strong><span style="font-size: small;">Q&amp;A Forum</span></strong><br /> <a href="https://forum.image.sc/tag/cellprofiler"><img src="{{WELCOME_FORUM}}" border="" /></a></td>
